# Isle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_debug.py  build_release.py  imgui.ini
Resources/Shaders/: Composite.frag  Composite.vert  Forward.frag  Forward.vert  Fullscreen.vert  Geometry.frag  Geometry.vert  Lighting.frag  Lighting.vert  Selection.frag  Selection.vert  Shadow.frag  Shadow.vert
Resources/Shaders/Common/: Buffers.glsl  Common.glsl  Structs.glsl
Resources/Shaders/Voxel/: BuildVoxels.comp  GenerateMipmaps.comp  InjectIrradiance.comp  PropagateIrradiance.comp  Voxelize.frag  Voxelize.geom  Voxelize.vert
Settings/: Binds.json
Source/Isle/IsleEditor/: CMakeLists.txt  IsleEditor.cpp
Source/Isle/IsleEditor/Core/Builder/: Builder.cpp  Builder.h
Source/Isle/IsleEditor/Core/Common/EditorComponent/: EditorComponent.h
Source/Isle/IsleEditor/Core/Editor/CodeView/: TextEditor.h
Source/Isle/IsleEditor/Core/Editor/CommandHistory/: CommandHistory.h
Source/Isle/IsleEditor/Core/Editor/Navbar/: Navbar.h
Source/Isle/IsleEditor/Core/Editor/Properties/: Properties.h
Source/Isle/IsleEditor/Core/Editor/SceneHierarchy/: SceneHierarchy.h
Source/Isle/IsleEngine/Core/AssetManager/: AssetManager.cpp  AssetManager.h
Source/Isle/IsleEngine/Core/Camera/: CameraMan.cpp  CameraMan.h  EditorCamera.h  OrthographicCamera.cpp
Source/Isle/IsleEngine/Core/Common/: Common.h
Source/Isle/IsleEngine/Core/Common/Memory/: WeakRef.h
Source/Isle/IsleEngine/Core/Common/Object/: Object.h
Source/Isle/IsleEngine/Core/Common/SceneComponent/: SceneComponent.h
Source/Isle/IsleEngine/Core/Common/Singleton/: Singleton.h
Source/Isle/IsleEngine/Core/Common/Transform/: Transform.h
Source/Isle/IsleEngine/Core/Engine/: Engine.cpp
Source/Isle/IsleEngine/Core/Graphics/FrameBuffer/: FrameBuffer.cpp
Source/Isle/IsleEngine/Core/Graphics/GfxResource/: GfxResource.cpp
Source/Isle/IsleEngine/Core/Graphics/Material/: Material.cpp  Material.h
Source/Isle/IsleEngine/Core/Graphics/Mesh/: Mesh.h  StaticMesh.h
Source/Isle/IsleEngine/Core/Graphics/Passes/: FowardPass.cpp  GeometryPass.cpp  LightingPass.cpp  Pass.h  SelectionPass.cpp  SelectionPass.h  ShadowPass.h
Source/Isle/IsleEngine/Core/Graphics/Pipeline/: Pipeline.cpp  Pipeline.h
Source/Isle/IsleEngine/Core/Graphics/Structs/: GpuStructs.h
Source/Isle/IsleEngine/Core/Graphics/Texture/: Texture.cpp  Texture.h
Source/Isle/IsleEngine/Core/Graphics/Texture3D/: Texture3D.cpp
Source/Isle/IsleEngine/Core/Importer/: Importer.cpp  Importer.h
Source/Isle/IsleEngine/Core/Importer/Gltf/: GltfImporter.cpp  GltfImporter.h
Source/Isle/IsleEngine/Core/Input/: Input.h
Source/Isle/IsleEngine/Core/Light/: Light.cpp
Source/Isle/IsleEngine/Core/Scene/: Scene.h
Source/Isle/IsleEngine/Core/World/: World.h
Source/Isle/IsleGame/: CMakeLists.txt  IsleGame.cpp  IsleGame.h
src/Isle/IsleEditor/: IsleEditor.cpp
src/Isle/IsleEditor/Core/Common/: EditorCommon.h
src/Isle/IsleEditor/Core/Editor/: Editor.cpp  Editor.h
src/Isle/IsleEditor/Core/Editor/AssetBrowser/: AssetBrowser.h
src/Isle/IsleEditor/Core/EditorApplication/: EditorApplication.cpp  EditorApplication.h
src/Isle/IsleEditor/Core/ModuleManager/: ModuleManager.h
src/Isle/IsleEngine/: CMakeLists.txt  IsleEngine.h
src/Isle/IsleEngine/Core/Application/: Application.cpp  Application.h
src/Isle/IsleEngine/Core/AssetManager/: AssetManager.h
src/Isle/IsleEngine/Core/Camera/: Camera.cpp  Camera.h  CameraMan.cpp  CameraMan.h  EditorCamera.cpp  EditorCamera.h  MainCamera.cpp  MainCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
src/Isle/IsleEngine/Core/Common/: Common.h
src/Isle/IsleEngine/Core/Common/Bounds/: Bounds.h
src/Isle/IsleEngine/Core/Common/Component/: Component.h
src/Isle/IsleEngine/Core/Common/Memory/: Ref.h
src/Isle/IsleEngine/Core/Common/Object/: Object.h
src/Isle/IsleEngine/Core/Common/Profiler/: Profiler.h
src/Isle/IsleEngine/Core/Common/Reflection/: Reflection.h
src/Isle/IsleEngine/Core/Common/SceneComponent/: SceneComponent.h
src/Isle/IsleEngine/Core/Common/Singleton/: Singleton.cpp  Singleton.h
src/Isle/IsleEngine/Core/Engine/: Engine.h
src/Isle/IsleEngine/Core/Graphics/: Render.cpp  Render.h
src/Isle/IsleEngine/Core/Graphics/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
src/Isle/IsleEngine/Core/Graphics/GfxBuffer/: GfxBuffer.cpp  GfxBuffer.h
src/Isle/IsleEngine/Core/Graphics/GfxResource/: GfxResource.cpp  GfxResource.h
src/Isle/IsleEngine/Core/Graphics/Material/: Material.cpp  Material.h
src/Isle/IsleEngine/Core/Graphics/Mesh/: Mesh.cpp  Mesh.h  PrimitiveMesh.cpp  PrimitiveMesh.h  StaticMesh.cpp
src/Isle/IsleEngine/Core/Graphics/Passes/: CompositePass.cpp  CompositePass.h  FowardPass.cpp  FowardPass.h  FullscreenQuad.cpp  FullscreenQuad.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  LightingPass.h  Pass.cpp  Pass.h  ShadowPass.cpp  VoxelPass.cpp  VoxelPass.h
src/Isle/IsleEngine/Core/Graphics/Pipeline/: Pipeline.cpp  Pipeline.h
src/Isle/IsleEngine/Core/Graphics/PipelineState/: PipelineState.cpp  PipelineState.h
src/Isle/IsleEngine/Core/Graphics/Primitives/: ConvexHull.h
src/Isle/IsleEngine/Core/Graphics/Shader/: Shader.cpp  Shader.h
src/Isle/IsleEngine/Core/Graphics/Structs/: GpuStructs.h
src/Isle/IsleEngine/Core/Graphics/Texture/: Texture.cpp  Texture.h
src/Isle/IsleEngine/Core/Graphics/Texture3D/: Texture3D.cpp  Texture3D.h
src/Isle/IsleEngine/Core/Graphics/VertexArray/: VertexArray.cpp  VertexArray.h
src/Isle/IsleEngine/Core/Graphics/Window/: Window.cpp  Window.h
src/Isle/IsleEngine/Core/Importer/: Importer.cpp  Importer.h
src/Isle/IsleEngine/Core/Importer/Gltf/: GltfImporter.cpp
src/Isle/IsleEngine/Core/Input/: Input.cpp  Input.h
src/Isle/IsleEngine/Core/Light/: Light.cpp  Light.h
src/Isle/IsleEngine/Core/Scene/: Scene.cpp  Scene.h
src/Isle/IsleEngine/Core/World/: World.cpp
src/Isle/IsleEngine/Resources/Shaders/: Forward.frag  Forward.vert
src/Isle/IsleEngine/Resources/Shaders/Common/: Buffers.glsl
src/Isle/IsleGame/: CMakeLists.txt  IsleGame.cpp  IsleGame.h
(+9 files in other folders)
